[project]
name = "universal-tokenizer-transfer-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "huggingface-hub[cli]<1.0",
    "numpy>=2.3.5",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]



[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129", marker = "sys_platform == 'linux'" }]

[tool.ruff]
line-length = 128
